// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbt-export-Export error for items without publicationTitle and Preserve BibTeX variables enabled #201-sentencecase=on+guess+caseprotection=as-needed.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "Roger D.",
            "lastName": "Blandford",
          },
          Object {
            "firstName": "Kip S.",
            "lastName": "Thorne",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Blandford, Roger D.",
          "Thorne, Kip S.",
        ],
        "date": Array [
          "2006",
        ],
        "publisher": Array [
          "Caltech",
        ],
        "title": Array [
          "Applications of Classical Physics",
        ],
      },
      "key": "Blandford2006",
      "type": "book",
    },
  ],
  "errors": Array [],
  "groups": Object {
    "fileDirectory": null,
    "groups": Object {},
    "root": Array [],
    "version": null,
  },
  "preamble": Array [],
  "strings": Object {},
}
`;

exports[`export Export error for items without publicationTitle and Preserve BibTeX variables enabled #201.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {
        "author": Array [
          Object {
            "firstName": "Roger D.",
            "lastName": "Blandford",
          },
          Object {
            "firstName": "Kip S.",
            "lastName": "Thorne",
          },
        ],
      },
      "fields": Object {
        "author": Array [
          "Blandford, Roger D.",
          "Thorne, Kip S.",
        ],
        "date": Array [
          "2006",
        ],
        "publisher": Array [
          "Caltech",
        ],
        "title": Array [
          "Applications of Classical Physics",
        ],
      },
      "key": "Blandford2006",
      "type": "book",
    },
  ],
  "errors": Array [],
  "preamble": Array [],
  "strings": Object {},
}
`;
